//
// (C) Copyright 2018 Intel Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// GOVERNMENT LICENSE RIGHTS-OPEN SOURCE SOFTWARE
// The Government's rights to use, modify, reproduce, release, perform, display,
// or disclose this software are subject to the terms of the Apache License as
// provided in Contract No. B609815.
// Any reproduction of computer software, computer software documentation, or
// portions thereof marked with this legend must also reproduce the markings.
//

syntax = "proto3";
package proto;

// This is the main service definition for adding services to the management server
// In order to add RPCs associated with your service add them in the ManagementService
// definition below.
service MgmtControl {
	rpc GetFeature(FeatureName) returns (Feature) {};
	rpc ListFeatures(ListFeaturesParams) returns (stream Feature) {};
}

message ListFeaturesParams {}

message FeatureName {
	string name = 1;
}

message Feature {
	// The name of the feature.
	FeatureName fname = 1;
	// The description of the feature.
	string description = 2;
}